feat: add BoardPage Header layout

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,6 +1,6 @@
 * {
-    margin: 0 auto;
-    padding: 0 auto;
+    margin: 0 ;
+    padding: 0 ;
     box-sizing: border-box;
 }
 
@@ -9,6 +9,7 @@
     height: 100vh;
 
     max-width: 1200px;
+    margin: 0 auto;
 
     display: flex;
     align-items: center;
@@ -33,6 +34,11 @@
     &__main {
         width: calc(100% - 282px);
         height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
 
         background-color: #f9f9f9;
         border-right: 1px solid #f4f4f5;
