--- a/app/board/[id]/page.module.scss
+++ b/app/board/[id]/page.module.scss
@@ -30,5 +30,22 @@
   }
 }
 
-.body {
+.area {
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+
+    gap: 16px;
+
+    &__noData {
+
+    }
+    &__isData {
+        
+    }
 }
