--- a/app/board/[id]/page.module.scss
+++ b/app/board/[id]/page.module.scss
@@ -40,12 +40,8 @@
     justify-content: center;
     align-content: center;
 
+    overflow-y: scroll;
+
     gap: 16px;
 
-    &__noData {
-
-    }
-    &__isData {
-        
-    }
 }
