--- a/app/board/[id]/page.module.scss
+++ b/app/board/[id]/page.module.scss
@@ -37,7 +37,7 @@
 
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-content: center;
 
     overflow-y: scroll;
